# bounded-model

./: AGENT.md  Cargo.toml  README.md
src/: bound.rs  cnf.rs  counterexample.rs  encoding.rs  lib.rs  solver.rs  system.rs
