[package]
name = "bounded-model"
version = "0.1.0"
edition = "2024"
description = "Bounded model checking with a simple DPLL SAT solver"
license = "MIT"
repository = "https://github.com/SuperInstance/bounded-model"
keywords = ["bmc", "sat", "solver", "model-checking", "verification"]
categories = ["algorithms", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
